Add new Kofax action properties

--- a/web.config
+++ b/web.config
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <configuration>
   <appSettings>
+    <add key="ViziAppsStudioVersion" value="2.0.0"/>
     <add key="MaxCustomerTestingDevices" value="5"/>
     <add key="MaxStagingUsesPerWeek" value="100"/>
     <add key="ViziAppsAdminConnectionString" value="SERVER=viziapps.c6um8x5yb22t.us-east-1.rds.amazonaws.com;USER ID=admin;PASSWORD=Mobile123;DATABASE=viziapps_admin;" />
@@ -22,10 +23,10 @@
     <add key="DaysForFreeTrial" value="30"/>
     <add key="ActiveUsersDaysLoggedIn" value="7"/>
     <add key="ActiveUsersMinNLogins" value="6"/>
-    <add key="AllowedAccountTypes" value="viziapps,kofax"/>
+    <add key="AllowedAccountTypes" value="viziapps,kofax,intuit,identive"/>
     <add key="BitlyLoginName" value="mobiflex"/>
     <add key="BitlyAPIKey" value="R_a3e944d3b69f4f8c510383c44ca83100"/>
-    <add key="DebugSessions" value="true"/>
+    <add key="DebugSessions" value="false"/>
     <add key="Telerik.Skin" value="Telerik"/>
     <add key="Telerik.ScriptManager.TelerikCdn" value="Enabled"/>
     <add key="Telerik.StyleSheetManager.TelerikCdn" value="Enabled"/>
@@ -36,7 +37,7 @@
                 validation="SHA1" 
                 decryption="AES" />
     <customErrors mode="Off"/>
-    <sessionState mode="InProc" cookieless="false" timeout="30" stateNetworkTimeout="30"/>
+    <sessionState mode="InProc" cookieless="false" timeout="30" stateNetworkTimeout="30" cookieName="viziapps_session"/>
     <authentication>
       <forms timeout="30"/>
     </authentication>
