Dynamic Connection String
I replaced the call to retrieve the connection string in these locations
with a static method call to DB.GetConnectionString().  This method will
return the correct connection String based on URL being served.

--- a/web.config
+++ b/web.config
@@ -5,6 +5,8 @@
     <add key="MaxCustomerTestingDevices" value="5"/>
     <add key="MaxStagingUsesPerWeek" value="100"/>
     <add key="ViziAppsAdminConnectionString" value="SERVER=viziapps.c6um8x5yb22t.us-east-1.rds.amazonaws.com;USER ID=admin;PASSWORD=Mobile123;DATABASE=viziapps_admin;" />
+    <add key="ViziAppsAdminStagingConnectionString" value="SERVER=viziapps.c6um8x5yb22t.us-east-1.rds.amazonaws.com;USER ID=admin;PASSWORD=Mobile123;DATABASE=viziapps_admin_staging;" />
+    <add key="StagingURL" value="http://localhost:14128/ViziAppsPortal/"/>
     <add key="DatabaseUsername" value="admin" />
     <add key="DatabasePassword" value="Mobile123" />
     <add key="AWSAccessKey" value="AKIAIL6IWUFXZBITQXTQ"/>
