--- a/web.config
+++ b/web.config
@@ -4,11 +4,24 @@
     <add key="ViziAppsStudioVersion" value="2.0.0"/>
     <add key="MaxCustomerTestingDevices" value="5"/>
     <add key="MaxStagingUsesPerWeek" value="100"/>
-    <add key="ViziAppsAdminConnectionString" value="SERVER=viziapps.c6um8x5yb22t.us-east-1.rds.amazonaws.com;USER ID=admin;PASSWORD=Mobile123;DATABASE=viziapps_admin;" />
+
+
+    <!--  Copied from older version for localhost access -->
+    <add key="ViziAppsAdminConnectionString" value="SERVER=localhost;USER ID=admin;PASSWORD=speech1;DATABASE=mobiflex_admin;pooling=false;" />
+    <add key="ViziAppsReportsConnectionString" value="SERVER=localhost;USER ID=admin;PASSWORD=speech1;DATABASE=mobiflex_reports;pooling=false;" />
+    <add key="MySqlConnectionString" value="SERVER=localhost;USER ID=admin;PASSWORD=speech1;pooling=false;" />
     <add key="DatabaseUsername" value="admin" />
-    <add key="DatabasePassword" value="Mobile123" />
-    <add key="AWSAccessKey" value="AKIAIL6IWUFXZBITQXTQ"/>
-    <add key="AWSSecretKey" value="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"/>
+    <add key="DatabasePassword" value="speech1" />
+    <!-- End LocalHost stuff -->
+      
+    <!-- <add key="ViziAppsAdminConnectionString" value="SERVER=viziapps.c6um8x5yb22t.us-east-1.rds.amazonaws.com;USER ID=admin;PASSWORD=Mobile123;DATABASE=viziapps_admin;" /> -->
+    <!-- <add key="DatabaseUsername" value="admin" />  -->
+    <!-- <add key="DatabasePassword" value="Mobile123" /> -->
+      
+      
+    <add key="AWSAccessKey" value="AKIAIL6IWUFXZBITQXTQ"/> 
+    <add key="AWSSecretKey" value="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"/> 
+      
     <add key="ImageBucket" value="MobiFlexImages"/>
     <add key="WebAppBucket" value="viziapps"/>
     <add key="GoogleAppsKey" value="276505743486.apps.googleusercontent.com"/>
@@ -57,6 +70,7 @@
         <add assembly="System.Data.Services.Client, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
         <add assembly="Telerik.Web.Design, Version=2011.3.1115.40, Culture=neutral, PublicKeyToken=121FAE78165BA3D4"/>
       </assemblies>
+
     </compilation>
     <pages>
       <controls>
