Optimized global variable access from RDS; Added detailed session logging; Added snap to grid on canvas

--- a/web.config
+++ b/web.config
@@ -22,13 +22,12 @@
     <add key="GoogleAppsCheckout2" value="http://www.viziapps.mobi/portal/GoogleAppsCheckout.aspx"/>
     <add key="DefaultButtonImage" value="https://s3.amazonaws.com/MobiFlexImages/apps/images/blank_buttons/medium_green_button.png"/>
     <add key="DefaultWebAppButtonImage" value="https://s3.amazonaws.com/MobiFlexImages/apps/images/jquery_buttons/c.png"/>
-    <add key="DaysForFreeTrial" value="30"/>
+    <add key="DaysToKeepErrorLogs" value="14"/>
     <add key="ActiveUsersDaysLoggedIn" value="7"/>
     <add key="ActiveUsersMinNLogins" value="6"/>
     <add key="AllowedAccountTypes" value="viziapps,kofax,intuit,identive"/>
     <add key="BitlyLoginName" value="mobiflex"/>
     <add key="BitlyAPIKey" value="R_a3e944d3b69f4f8c510383c44ca83100"/>
-    <add key="DebugSessions" value="false"/>
     <add key="Telerik.Skin" value="Telerik"/>
     <add key="Telerik.ScriptManager.TelerikCdn" value="Enabled"/>
     <add key="Telerik.StyleSheetManager.TelerikCdn" value="Enabled"/>
